@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 30-Jun-2010 Jean-Marie Simonet
  [#21169] "Save & New" toolbar button in "Templates Manager: Edit Style" saves an empty template. Thanks Joseph
+ [#21170] Changes made in description after toggling the editor are not saved. Thanks CY Lee.
 
 29-Jun-2010 Ian MacLennan
  # [#20959] Single Newsfeed Display Options parameters
